# adafede.github.io

./: .gitignore  .pre-commit-config.yaml  404.html  404.qmd  Dockerfile  README.md  WEBSITE_SPEC_IMPROVEMENTS.md  _config.yml  _headers  _quarto.yml  articles.html  articles.qmd  articles.xml  cv.html  cv.qmd  expertise.html  expertise.qmd  humans.txt  index.html  index.qmd  index.xml  listings.json  llms-full.txt  llms.txt  package.json  posts.html  posts.json  posts.qmd  posts.xml  prek.toml  privacy.qmd  pyproject.toml  references.bib  robots.txt  rss.html  rss.qmd  rss.xml  search.json  site.webmanifest  sitemap.xml  (+12 more)
.github/: README.md  dependabot.yml
.well-known/: api-catalog  security.txt
_affiliations/: ANTWERP.yml  BASEL_Hamburger.yml  BERN_Pertz.yml  BIGCAT.yml  BIOCIS.yml  CHANGINS_Bach.yml  GLASGOW.yml  IMSB_Zamboni.yml  JENA_Steinbeck.yml  JOHANNESBURG.yml  MITE.yml  Melanoma.yml  OICR.yml  PANAMA.yml  RONIN.yml  SHAHID_Ebrahimi.yml  TIMA.yml  TOKUSHIMA.yml  UNIGE_Wolfender.yml  VIRGINIA.yml
_authors/: AdrianoRutz_IMSB.yml  AdrianoRutz_IMSB_corr.yml  AdrianoRutz_UNIGE.yml  AdrianoRutz_UNIGEIMSB_corr.yml  AdrianoRutz_UNIGE_eq.yml  AnikaJohn_BERN.yml  ArnaudGaudry_UNIGE.yml  BenoitBach_CHANGINS.yml  ChristophSteinbeck_JENA.yml  DanielMietchen_MULTI.yml  EgonWillighagen_BIGCAT.yml  ElianeGaro_BASEL_corr.yml  GuidoPauli_CHICAGO.yml  IvanoTonutti_TRADALL.yml  JakobReinhardt_BASEL.yml  JakubGalgonek_IOCB.yml  JamesGraham_CHICAGO.yml  JeanLucWolfender_UNIGE.yml  JeanLucWolfender_UNIGE_corr.yml  JiriVrondasek_IOCB.yml  JonathanBisson_CHICAGO.yml  JonathanBisson_CHICAGO_corr.yml  JustinVanDerHooft_MULTI.yml  KornkanokIngkaninan_NARESUAN.yml  LaraDurr_BASEL.yml  MITE_authors_1.yml  MITE_authors_corr.yml  MaciejDobrzynski_BERN.yml  MahabirGupta_PANAMA_deceased.yml  MariaSorokina_JENA.yml  MarnixMedema_WAGENINGEN_corr.yml  MatthiasHamburger_BASEL.yml  MehdiBeniddir_BIOCIS_corr.yml  Melanoma_authors.yml  MitjaZdouc_WAGENINGEN_corr.yml  MiwaDounoueKubo_UNIGETOKUSHIMA_eq.yml  MohsenBagheri_MULTI.yml  MorisKeller_BASEL.yml  NicolaZamboni_IMSB.yml  NicolaZamboni_IMSB_corr.yml  (+16 more)
_cache/: geocache.json
_data/: authors.yml  navigation.yml  ui-text.yml
_docs/: README.md
_drafts/: post-draft.md
(+398 files in other folders)
