[project]
name = "adafede-github-io"
version = "0.0.1"
description = "My personal website"
requires-python = ">=3.13,<4"
dependencies = [
    "bs4>=0.0.2,<1",
    "commonmeta-py>=0.170,<1",
    "folium>=0.20.0,<1",
    "geopy>=2.4.1,<3",
    "lxml>=6.0.0,<7",
    "markdown>=3.9,<4",
    "pre-commit>=4.3.0,<5",
    "quarto>=0.1.0,<1",
    "ruamel-yaml>=0.18.15,<1",
]

[tool.deptry]
known_first_party = ["scripts"]

[tool.deptry.package_module_name_map]
commonmeta-py = ["commonmeta"]

[tool.deptry.per_rule_ignores]
DEP002 = ["deptry", "pre-commit","quarto"]

[tool.ty.rules]
unresolved-import = "ignore"
