[project]
name = "adafede-github-io"
version = "0.0.1"
description = "My personal website"
requires-python = "==3.14.*"
dependencies = [
  "PyYAML>=6.0",
  "bs4>=0.0.2",
  "commonmeta-py>=0.199",
  "folium>=0.20.0",
  "geopy>=2.4.1",
  "lxml>=6.0.2",
  "markdown>=3.10",
  "pre-commit>=4.5.1",
  "quarto>=0.1.0",
  "ruamel-yaml>=0.19.1",
]

[tool.deptry]
known_first_party = [
  "config",
  "infrastructure",
  "scripts",
  "services",
  "utilities",
]

[tool.deptry.package_module_name_map]
commonmeta-py = [
  "commonmeta",
]
PyYAML = [
  "yaml",
]
ruamel-yaml = [
  "ruamel",
  "ruamel.yaml",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["deptry", "pre-commit", "quarto"]

[tool.ty.rules]
unresolved-import = "ignore"
