[project]
name = "adafede-github-io"
version = "0.0.1"
description = "My personal website"
requires-python = "==3.14.*"
dependencies = [
  "bs4>=0.0.2",
  "commonmeta-py>=0.201",
  "folium>=0.20.0",
  "geopy>=2.4.1",
  "lxml>=6.0.2",
  "markdown>=3.10.1",
  "pyyaml>=6.0.3",
  "quarto>=0.1.0",
  "ruamel-yaml>=0.19.1",
]

[dependency-groups]
dev = [
  "prek>=0.3.2",
]

[tool.deptry]
known_first_party = [
  "config",
  "infrastructure",
  "scripts",
  "services",
  "utilities",
]

[tool.deptry.package_module_name_map]
commonmeta-py = [
  "commonmeta",
]
pyyaml = [
  "yaml",
]
PyYAML = [
  "yaml",
]
ruamel-yaml = [
  "ruamel",
  "ruamel.yaml",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["quarto"]

[tool.ty.rules]
unresolved-import = "ignore"
